--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/output.css">
     <title>OSM - One Smart Mate | Software de Mantenimiento Autónomo TPM</title>
     <meta name="description" content="Revoluciona el mantenimiento autónomo de tu empresa con OSM. Plataforma TPM completa con CILT, OPL y gestión de anomalías. ¡Prueba gratis!">
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>">
+    <link rel="icon" href="logo.png">
 </head>
 <body class="font-inter bg-white text-gray-800 overflow-x-hidden">
     <!-- Navigation -->
