--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/output.css">
     <title>OSM - One Smart Mate | Software de Mantenimiento Autónomo TPM</title>
-    <meta name="description" content="Revoluciona el mantenimiento autónomo de tu empresa con OSM. Plataforma TPM completa con CILT, OPL y gestión de anomalías. ¡Prueba gratis!">
+    <meta name="description" content="Revoluciona el mantenimiento autónomo de tu empresa con OSM. Plataforma TPM completa con CILT / LILA, OPL y gestión de anomalías. ¡Prueba gratis!">
     <link rel="icon" href="logo.png">
 </head>
 <body class="font-inter bg-white text-gray-800 overflow-x-hidden">
@@ -22,7 +22,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#features" class="text-gray-600 hover:text-primary transition-colors duration-200">Características</a>
                     <a href="#am" class="text-gray-600 hover:text-primary transition-colors duration-200">Mantenimiento Autónomo</a>
-                    <a href="#cilt" class="text-gray-600 hover:text-primary transition-colors duration-200">CILT</a>
+                    <a href="#cilt" class="text-gray-600 hover:text-primary transition-colors duration-200">CILT / LILA</a>
                     <a href="#opl" class="text-gray-600 hover:text-primary transition-colors duration-200">OPL</a>
                     <a href="#contact" class="bg-primary text-white px-6 py-2 rounded-full hover:bg-primary-dark transition-all duration-200 shadow-soft hover:shadow-medium">Contacto</a>
                 </div>
@@ -51,7 +51,7 @@
                 </h1>
                 <p class="text-xl md:text-2xl text-gray-600 mb-8 leading-relaxed">
                     OSM es tu <strong>compañero inteligente</strong> para gestionar el mantenimiento proactivo con metodología TPM, 
-                    CILT y OPL. Detecta anomalías antes de que se vuelvan costosas reparaciones.
+                    CILT / LILA y OPL. Detecta anomalías antes de que se vuelvan costosas reparaciones.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start mb-8">
                     <button class="bg-primary text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-primary-dark transition-all duration-300 shadow-medium hover:shadow-large hover:-translate-y-1 flex items-center justify-center gap-2">
@@ -243,10 +243,10 @@
                 
                 <div>
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">
-                        <span class="text-primary">CILT</span> - Cleaning, Inspection, Lubrication & Tightening
+                        <span class="text-primary">CILT / LILA</span> - Cleaning, Inspection, Lubrication & Tightening
                     </h2>
                     <p class="text-lg text-gray-600 mb-6">
-                        El módulo CILT es el corazón del mantenimiento autónomo. Permite crear y gestionar 
+                        El módulo CILT / LILA es el corazón del mantenimiento autónomo. Permite crear y gestionar 
                         procedimientos detallados para limpieza, inspección, lubricación y ajuste de equipos.
                     </p>
                     
@@ -732,7 +732,7 @@
                     <ul class="space-y-2 text-white/80">
                         <li><a href="#features" class="hover:text-white transition-colors">Características</a></li>
                         <li><a href="#am" class="hover:text-white transition-colors">Mantenimiento Autónomo</a></li>
-                        <li><a href="#cilt" class="hover:text-white transition-colors">CILT</a></li>
+                        <li><a href="#cilt" class="hover:text-white transition-colors">CILT / LILA</a></li>
                         <li><a href="#opl" class="hover:text-white transition-colors">OPL</a></li>
                     </ul>
                 </div>
